# Benchify

./: .commit-msg-task1.txt  .commit-msg-temp.txt  .gitignore  CI_CD_AUDIT_REPORT.txt  CLAUDE.md  Claude Resume Command.txt  LICENSE  README.md  UNIFIED-SPEC.md  implementation_plan.md
.claude/: settings.local.json
.github/workflows/: ci.yml  desktop-ci.yml  injector-build-sdk.yml  injector-sdk-ci.yml  ios-test.yml  linux_smoke_test.yml  packet-capture-test.yml  release.yml  self-heal.yml  server-ci.yml  web-dashboard-ci.yml
.planning/: CI-FIX-PLAN.md  HANDOFF.json  PROJECT.md  REQUIREMENTS.md  REVIEW-FIX-server.md  REVIEW-flutter-FIX.md  REVIEW-flutter.md  REVIEW-server.md  REVIEW-web-FIX.md  REVIEW-web.md  ROADMAP.md  STATE.md  config.json
.planning/audit/: FINDINGS.md  INDEX.md  slice-01-flutter-desktop-main.md  slice-02-flutter-desktop-services.md  slice-03-flutter-desktop-parsers.md  slice-04-flutter-desktop-ui.md  slice-05-flutter-mobile-runtime.md  slice-06-flutter-mobile-android.md  slice-07-flutter-mobile-ios.md  slice-08-mobile-companion-ux.md  slice-09-injector-python-core.md  slice-10-injector-cli.md  slice-11-injector-sdk-rust-lib.md  slice-12-injector-sdk-metrics.md  slice-13-injector-engine-core.md  slice-14-pcprobe-binary.md  slice-15-pcprobe-pc-metrics.md  slice-16-pcprobe-pc-video.md  slice-17-web-data-state.md  slice-18-web-dashboard-ui.md  slice-19-build-packaging-ci.md  slice-20-cross-cutting-final.md
CL Logs/: 0_license-check.txt  1_build-and-test (macos-latest).txt  1_build-windows.txt  2_build-and-test (windows-latest).txt  2_build-plugins.txt  3_build-and-test (ubuntu-latest).txt  3_build-macos.txt  4_build-linux.txt  4_url-allowlist.txt  5_resolve-version.txt
CL Logs/CL LOGS 4/: 0_build-and-test (windows-latest).txt  1_build-and-test (macos-latest).txt  2_url-allowlist.txt  3_build-and-test (ubuntu-latest).txt  4_license-check.txt
CL Logs/CL LOGS 5/: 0_build-and-test (macos-latest).txt  1_build-and-test (windows-latest).txt  2_url-allowlist.txt  3_license-check.txt  4_build-and-test (ubuntu-latest).txt
CL Logs/build-and-test (macos-latest)/: 1_Set up job.txt  (+10 more)
benchify-godot-plugin/: README.md  benchify_plugin.gdextension
benchify-unity-plugin/: README.md  package.json
benchify-unreal-plugin/: Benchify.uplugin  README.md
graphify-out/: GRAPH_REPORT.md  graph.html  graph.json
ios_agents/: app_list.py  collector.py  device_list.py  dvt_recorder.py  dvt_recorder_config.py  requirements.txt  tvos_collector.py
performancebench/: CHANGELOG.md  README.md  pubspec.yaml
performancebench-injector/: README.md  injector_cli.py  requirements-dev.txt  requirements.txt
performancebench-injector/pcprobe/: Cargo.toml
performancebench-injector/pcprobe/src/: cli.rs  collector.rs  discovery.rs  ipc.rs  main.rs
performancebench-injector/sdk/: Cargo.toml
performancebench-injector/sdk/android/: build.gradle
performancebench-injector/sdk/android/src/main/: AndroidManifest.xml
performancebench-injector/sdk/android/src/main/java/dev/benchify/: BenchifyBroadcastReceiver.java  BenchifyService.java  FpsOverlayView.java  SdkLoader.java  WebViewBridge.java
performancebench-injector/sdk/android/src/main/res/drawable/: pill_background.xml
performancebench-injector/sdk/android/src/main/res/layout/: overlay_pill.xml
performancebench-injector/sdk/src/: automation.rs  jni_bridge.rs  lib.rs  models.rs  transport.rs
performancebench-injector/sdk/src/engine_core/: auto_marker.rs  marker.rs  metrics.rs  mod.rs
performancebench-injector/sdk/src/metrics/: cpu.rs  fps.rs  gpu.rs  memory.rs  mod.rs  net_per_process.rs  network.rs  webview_js.rs
performancebench-injector/sdk/src/pc_metrics/: collector.rs  cpu.rs  disk_io.rs  dxgi.rs  etw.rs  gpu.rs  memory.rs  mod.rs  network.rs  pdh.rs
performancebench-injector/sdk/src/pc_video/: chunk_manager.rs  linux_capture.rs  mac_capture.rs  mod.rs  windows_capture.rs
performancebench-injector/sdk/tests/: integration_test.rs  pc_metrics_integration.rs  test_automation.rs  test_net_per_process.rs  test_webview.rs
performancebench-mobile/: README.md  pubspec.yaml
performancebench-server/: .env.example  Cargo.toml  Dockerfile  docker-compose.prod.yml  docker-compose.yml
performancebench-server/db/: Cargo.toml
performancebench-server/db/src/: alert_queries.rs  audit_queries.rs  connection.rs  device_queries.rs  lens_queries.rs  lib.rs  migrations.rs  schema.rs  session_queries.rs  sso_queries.rs  team_queries.rs  token_queries.rs  trend_queries.rs  user_queries.rs
performancebench-server/deploy/: airgap-checklist.md  install.sh  nginx.conf  performancebench-server.service
performancebench-server/deploy/helm/: .helmignore  Chart.yaml  values.yaml
performancebench-server/deploy/helm/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  pvc.yaml  secret.yaml  service.yaml
performancebench-server/migrations/00000000000000_initial/: down.sql  up.sql
performancebench-server/migrations/00000000000001_enterprise/: down.sql  up.sql
performancebench-server/models/: Cargo.toml
performancebench-server/models/src/: alert.rs  audit.rs  collection.rs  detected_issue.rs  device.rs  lib.rs  marker.rs  marker_stats.rs  metric_sample.rs  region_stats.rs  schema.rs  session.rs  sso.rs  team.rs  token.rs  user.rs  video.rs
performancebench-server/server/: Cargo.toml
performancebench-server/server/src/: config.rs  error.rs  lib.rs  main.rs  state.rs
performancebench-server/server/src/middleware/: api_token.rs  audit.rs  auth.rs  mod.rs  rbac.rs
performancebench-server/server/src/routes/: admin.rs  alerts.rs  audit.rs  auth.rs  devices.rs  health.rs  jira.rs  lenses.rs  mod.rs  openapi.rs  sessions.rs  sso.rs  teams.rs  tokens.rs  trends.rs  upload.rs  webhooks.rs  ws.rs
performancebench-server/server/src/services/: analytics.rs  mod.rs  notifications.rs
performancebench-server/server/src/utils/: jwt.rs  ldap.rs  mod.rs  oidc.rs  password.rs  saml.rs
performancebench-web/: README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts
(+523 files in other folders)
