[workspace]
members = ["models", "db", "server"]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.23", features = ["v4", "serde"] }
diesel = { version = "2.3", features = ["postgres", "uuid", "serde_json", "chrono"] }
diesel_migrations = "2.3"
diesel-async = { version = "0.9", features = ["postgres", "deadpool"] }
deadpool-postgres = { version = "0.14", features = ["serde"] }
jsonwebtoken = "10.3"
bcrypt = "0.19"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
config = "0.15"
axum = "0.8"
tokio = { version = "1.52", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }
chrono = { version = "0.4", features = ["serde"] }
axum-extra = { version = "0.10", features = ["cookie"] }
sha2 = "0.10"
rand = "0.8"
time = "0.3"
