[package]
name = "performancebench-sdk"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
jni = { version = "0.21", features = ["invocation"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
log = "0.4"
android_logger = "0.13"
lazy_static = "1.4"
once_cell = "1.19"

[dev-dependencies]
tempfile = "3"
