[package]
name = "db"
version = "0.1.0"
edition = "2024"

[dependencies]
models = { path = "../models" }
diesel.workspace = true
diesel-async.workspace = true
deadpool-postgres.workspace = true
diesel_migrations.workspace = true
tracing.workspace = true
chrono.workspace = true
sha2.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
