[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
models = { path = "../models" }
db = { path = "../db" }
axum.workspace = true
tokio.workspace = true
tower-http.workspace = true
jsonwebtoken.workspace = true
bcrypt.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
config.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
deadpool-postgres.workspace = true
axum-extra.workspace = true
sha2.workspace = true
chrono.workspace = true
time.workspace = true
rand.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
tokio-rustls.workspace = true
axum-server.workspace = true
utoipa.workspace = true
